# zee5-dl

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml
certificate/: zee5_certificate.pem
tests/: test_auth.py
zee5/: __init__.py  auth.py  cli.py  config.py  download.py  headers.py  log.py  models.py  paths.py  session.py  urls.py
